[FIX] mail: im status is barely readable

--- a/addons/mail/static/src/discuss/core/web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/web/discuss_sidebar_categories.scss
@@ -14,6 +14,11 @@
         }
     }
 }
+
+.o-mail-DiscussSidebarChannel-itemMain {
+    background-color: inherit !important; // Not 'bg-inherit' so it cancels btn hover effect too
+}
+
 .o-mail-DiscussSidebarChannel-threadIcon {
     font-size: xx-small;
     width: 13px;
